Fix z-index of navbar; not just tooltip

--- a/app/static/css/pl/navbar.css
+++ b/app/static/css/pl/navbar.css
@@ -4,6 +4,7 @@
     height: var(--navbar-height);
     position: sticky;
     top: 0;
+    z-index: 1030;
 }
 
 .navbar-brand {
